Updated files for production